--- a/3-4/index.html
+++ b/3-4/index.html
@@ -10,7 +10,7 @@
 <body>
     <p class="html">2章チェックテスト</p>
     <!--名前を入力してquestion.phpに移動するフォームを作成-->
-    <form action="question.php" action="answer.php" method="post">
+    <form action="question.php" method="post">
       <input type="text" name="text" placeholder="名前を入力してください" />
       <input type="submit" name="submit" value="テスト開始" />
     </form>
